--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="./vue.css">
+  <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
 </head>
 <body>
 
   <div id="app">加载中...</div>
   <script>
     window.$docsify = {
+	  name="LevineDocs"
       coverpage:true,
       loadNavbar:true,
       onlyCover:true,
       logo:'/_media/logo.jpg'
     }
   </script>
-  <script src="./docsify.min.js"></script>
+  <script src="//unpkg.com/docsify"></script>
+  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 </body>
 </html>
