--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="app">加载中...</div>
   <script>
     window.$docsify = {
-	  name='LevineDocs',
+	  name:'LevineDocs',
       coverpage:true,
       loadNavbar:true,
       onlyCover:true,
