--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 	  name:'LevineDocs',
       coverpage:true,
       loadNavbar:true,
-      onlyCover:true,
-      logo:'/_media/logo.jpg'
+      onlyCover:true
     }
   </script>
   <script src="//unpkg.com/docsify"></script>
