--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>LevineDocs</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
+  <link rel="stylesheet" href="https://unpkg.com/docsify/themes/vue.css">
 </head>
 <body>
 
   <div id="app">加载中...</div>
   <script>
     window.$docsify = {
-	  name:'LevineDocs',
       coverpage:true,
       loadNavbar:true,
       onlyCover:true
     }
   </script>
-  <script src="//unpkg.com/docsify"></script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
 </body>
 </html>
