--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     window.$docsify = {
       coverpage:true,
       loadNavbar:true,
-      onlyCover:true
+      onlyCover:true,
+	  coverpage: ['/', '/zh-cn/','/en/'],
+	  auto2top: true,
+	  autoHeader: true,
+	  executeScript: true,
+	  alias: {
+      '/.*/_navbar.md': '/_navbar.md'
+    }
     }
   </script>
   <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
