--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@
     }
   </script>
   <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="https://unpkg.com/prismjs/components/prism-bash.js"></script>
+  <script src="https://unpkg.com/prismjs/components/prism-java.js"></script
+  <script src="https://unpkg.com/prismjs/components/prism-python.js"></script>
+  <script src="https://unpkg.com/prismjs/components/prism-django.js"></script>
+  <script src="https://unpkg.com/prismjs/components/prism-groovy.js"></script>
+  
 </body>
 </html>
