--- a/index.html
+++ b/index.html
@@ -62,5 +62,7 @@
   <script src="https://unpkg.com/docsify-copy-code"></script>
   <!--<script src="https://unpkg.com/docsify"></script>-->
   <script src="https://unpkg.com/docsify/lib/plugins/search.js"></script>
+  <!--统计访问人数-->
+  <script src="./VisitorCount.js"></script>
 </body>
 </html>
