--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     window.$docsify = {
       coverpage:true,
       loadNavbar:true,
+	  loadSidebar: true,
       onlyCover:true,
 	  coverpage: ['/', '/zh-cn/','/en/'],
 	  auto2top: true,
