--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     window.$docsify = {
       coverpage:true,
       loadNavbar:true,
+	  // 启用相对路径
+	  relativePath: true,
       onlyCover:true,
 	  coverpage: ['/', '/zh-cn/','/en/'],
 	  auto2top: true,
